Noteworthy Changes in ssocr Releases
====================================

Upcoming Version ?.??.? (????-??-??):
-------------------------------------
 * New option -N, --min-segment to specify the minimum width and height of
   a segment, for both scanline based and ratio based character recognition

Version 2.22.2 (2023-04-24):
----------------------------
 * Documentation improvements

Version 2.22.1 (2022-01-25):
----------------------------
 * Fix build failure with Imlib 1.7.5 (pkg-config replaces imlib2-config)

Version 2.22.0 (2021-11-07):
----------------------------
 * Fix compilation with GCC 10
 * Add recognition of characters 'j' and 'y' to full charset
 * Add this "NEWS" file
 * Add character set "tt_robot"

Version 2.21.0 (2021-04-25):
----------------------------
 * Add ability to print spaces between digits that are positioned further away

Version 2.20.0 (2021-04-19):
----------------------------
 * Add options to adjust the ratios used for decimal separator recognition

Version 2.19.0 (2019-08-05):
----------------------------
 * Add option to select the set of recognized characters
 * Add option to omit decimal points from the output

Version 2.18.0 (2017-11-19):
----------------------------
 * Add convenience parameter N to the dilation and erosion command

Version 2.17.0 (2017-10-22):
----------------------------
 * Add option to print detected segments as ASCII art w/o further debug output
 * Add option to change the output to a hex string representing set segments
 * Add 7 characters shown on a display used in a Chinese table tennis robot

Version 2.16.0 (2013-12-29):
----------------------------
 * Add command to mirror the image horizontally or vertically

Version 2.15.0 (2013-12-29):
----------------------------
 * Add detection of minus signs, thanks to a patch by Cristiano Fontana

Version 2.14.0 (2013-08-04):
----------------------------
 * Add alternative version of the digit 9 w/o lower horizontal segment
